syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user.v1;

option go_package = "github.com/gilwong00/go-discord/gen/proto/v1/user;userv1";

message User {
	string id = 1;
	string username = 2;
	string avatar_url = 3;
	string email = 4;
	google.protobuf.Timestamp created_at = 5;
}

service UserService {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
	string username = 1;
	string avatar_url = 2;
	string email = 3;
}

message CreateUserResponse {
	User user = 1;
}
